--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"id": "memocard-text2image",
-	"name": "Memo Card",
-	"version": "1.0.2",
+	"name": "Text to Image",
+	"version": "1.0.3",
 	"minAppVersion": "0.12.0",
 	"description": "This plugin can convert text into beautiful pictures for saving and sharing.",
 	"author": "cuimc",
